# palindrome_Haml3t

./: LICENSE  palindrome_file  palindrome_url  pyproject.toml
src/palindrome_Haml3t/: phrase.py
tests/: test_phrase.py
