[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "palindrome_Haml3t"
version = "0.1.1"
authors = [
  { name="David Sugarman", email="d.m.sugarman@gmail.com" },
]
description = "Palindrome sample package for Learn Enough Python to be Dangerous"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Haml3t/palindrome_Haml3t"
"Bug Tracker" = "https://github.com/Haml3t/palindrome_Haml3t/issues"